2007-01-08  Kazu Hirata  <kazu@codesourcery.com>

	* config/tc-m68k.c (m68k_archs, m68k_cpus): Treat Fido as an
	architecture by itself.
	(m68k_ip): Don't issue a warning for tbl instructions on fido.
	(m68k_elf_final_processing): Treat Fido as an architecture by
	itself.

2007-01-08  Kai Tietz	<kai.tietz@onevision.com>

	* configure.tgt: Renamed target x86_64-*-mingw64 to x86_64-*-mingw*

2007-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (set_intel_syntax): Update set_intel_syntax
	depending on allow_naked_reg.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_cpsi): Set mmod bit for 2 argument form.

2007-01-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/3826
	* config/tc-i386.c (register_prefix): New.
	(set_intel_syntax): Set set_intel_syntax to "" if register
	prefix isn't needed.
	(check_byte_reg): Use register_prefix for error message.
	(check_long_reg): Likewise.
	(check_qword_reg): Likewise.
	(check_word_reg): Likewise.

2006-01-04  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (do_neon_shl_imm): Swap rN, rM.
	(do_neon_qshl_imm): Likewise.
	(do_neon_rshl): New function. Handle rounding variants of
	v{q}shl-by-register.
	(insns): Use do_neon_rshl for vrshl, vqrshl.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (NEON_ENC_TAB): Fix encoding of vclt, vcle, vaclt
	and vacle.

2007-01-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (swap_operands): Remove branches.

2007-01-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Update copyright year.
	* config/tc-i386.h: Likewise.

2007-01-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (smallest_imm_type): Return unsigned int
	instead of int.

2007-01-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Convert to ISO C90 formatting
	* config/tc-i386.h: Likewise.

2007-01-03  David Daney  <ddaney@avtrex.com>

	* config/tc-mips.c (md_show_usage):  Clean up -mno-shared
	documentation.
